- Added default timestamp format definitions (ISO 8601) (related to bug #36128, Interbase PDO)